[gd_scene load_steps=3 format=3 uid="uid://c1t1nywkhjtl2"]

[ext_resource type="Script" uid="uid://c1ix0dvx5m65q" path="res://Scenes/UI.gd" id="1_nxvpl"]
[ext_resource type="FontFile" uid="uid://cf4f86wtpb1ko" path="res://Ressources/Fonts/FSEX300.ttf" id="2_dewlx"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_nxvpl")

[node name="ScoreContainer0" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(384, 128)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -128.0
offset_right = 256.0
grow_vertical = 0

[node name="ScoreLabel0" type="Label" parent="ScoreContainer0"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_dewlx")
theme_override_font_sizes/font_size = 32
text = "Player 1 : 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreContainer1" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(384, 128)
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -256.0
offset_top = -128.0
grow_horizontal = 0
grow_vertical = 0

[node name="ScoreLabel1" type="Label" parent="ScoreContainer1"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_dewlx")
theme_override_font_sizes/font_size = 32
text = "Player 2 : 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PowerContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(384, 128)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -128.0
offset_right = 128.0
grow_horizontal = 2
grow_vertical = 0

[node name="PowerLabel" type="Label" parent="PowerContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_dewlx")
theme_override_font_sizes/font_size = 32
text = "Power : 0"
horizontal_alignment = 1
vertical_alignment = 1
